[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/temp/shop.png" type="Texture" id=1]
[ext_resource path="res://scenes/present/Shop.gd" type="Script" id=2]
[ext_resource path="res://assets/temp/think_price-Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/temp/gold.png" type="Texture" id=4]
[ext_resource path="res://assets/temp/purchased.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 21 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 21 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Shop" type="Node2D" groups=["present"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -50 )
texture = ExtResource( 1 )

[node name="Gun" type="Area2D" parent="."]
position = Vector2( -46, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun"]
position = Vector2( -3, -21 )
shape = SubResource( 2 )

[node name="Shield" type="Area2D" parent="."]
position = Vector2( -5, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2( 0, -21 )
shape = SubResource( 1 )

[node name="Scissor" type="Area2D" parent="."]
position = Vector2( 39, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scissor"]
position = Vector2( 3, -21 )
shape = SubResource( 3 )

[node name="PriceThought" type="Node2D" parent="."]
visible = false

[node name="Thought" type="AnimatedSprite" parent="PriceThought"]
position = Vector2( 39, -98 )
frames = SubResource( 4 )
frame = 2

[node name="Price" type="HBoxContainer" parent="PriceThought"]
margin_left = 24.0
margin_top = -115.0
margin_right = 70.0
margin_bottom = -99.0
size_flags_vertical = 0
custom_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="PriceThought/Price"]
margin_left = 5.0
margin_right = 19.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
size_flags_horizontal = 10
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="GoldCount" type="Label" parent="PriceThought/Price"]
margin_left = 27.0
margin_right = 46.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Purchased" type="Sprite" parent="."]
visible = false
position = Vector2( -48, -21 )
texture = ExtResource( 5 )

[node name="Purchased2" type="Sprite" parent="."]
visible = false
position = Vector2( -5, -20 )
texture = ExtResource( 5 )
flip_h = true

[node name="Purchased3" type="Sprite" parent="."]
visible = false
position = Vector2( 38, -20 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="Gun" to="." method="_on_Gun_body_entered"]
[connection signal="body_exited" from="Gun" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
[connection signal="body_exited" from="Shield" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Scissor" to="." method="_on_Scissor_body_entered"]
[connection signal="body_exited" from="Scissor" to="." method="_on_body_exited"]
[connection signal="frame_changed" from="PriceThought/Thought" to="." method="_on_Thought_frame_changed"]
